--- a/Hackathon/src/Grid.form
+++ b/Hackathon/src/Grid.form
@@ -30,24 +30,24 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btn1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btn13" min="-2" max="-2" attributes="0"/>
+                                  <Component id="A1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="A4" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btn2" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btn14" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="B1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="B4" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btn5" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btn9" min="-2" max="-2" attributes="0"/>
+                                  <Component id="A2" min="-2" max="-2" attributes="0"/>
+                                  <Component id="A3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btn10" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btn6" min="-2" max="-2" attributes="0"/>
+                                  <Component id="B3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="B2" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -55,24 +55,24 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="btn3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btn15" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="C1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="C4" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btn4" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="btn16" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="D1" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="D4" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="btn11" min="-2" max="-2" attributes="0"/>
+                              <Component id="C3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btn12" min="-2" max="-2" attributes="0"/>
+                              <Component id="D3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
-                              <Component id="btn7" min="-2" max="-2" attributes="0"/>
+                              <Component id="C2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btn8" min="-2" max="-2" attributes="0"/>
+                              <Component id="D2" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -99,34 +99,34 @@
               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="btn4" min="-2" pref="47" max="-2" attributes="0"/>
+                      <Component id="D1" min="-2" pref="47" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btn8" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                          <Component id="btn7" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                          <Component id="btn6" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                          <Component id="btn5" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                          <Component id="D2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                          <Component id="C2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                          <Component id="B2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                          <Component id="A2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="btn3" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="btn2" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="btn1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="C1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="B1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="A1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="btn11" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                      <Component id="btn12" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                      <Component id="btn10" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                      <Component id="C3" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                      <Component id="D3" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                      <Component id="B3" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="btn9" alignment="1" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="A3" alignment="1" min="-2" pref="47" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btn15" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="btn16" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="btn14" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="btn13" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="C4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="D4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="B4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="A4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="218" max="32767" attributes="0"/>
           </Group>
@@ -134,88 +134,97 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btn7">
+    <Component class="javax.swing.JButton" name="C2">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn1ActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="btn13">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btn8">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btn2">
+    <Component class="javax.swing.JButton" name="A1">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="A1ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btn14">
+    <Component class="javax.swing.JButton" name="A4">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn9">
+    <Component class="javax.swing.JButton" name="D2">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn3">
+    <Component class="javax.swing.JButton" name="B1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="B1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="B4">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn15">
+    <Component class="javax.swing.JButton" name="A3">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn10">
+    <Component class="javax.swing.JButton" name="C1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="C1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="C4">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn4">
+    <Component class="javax.swing.JButton" name="B3">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn16">
+    <Component class="javax.swing.JButton" name="D1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="D1ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="D4">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="D4ActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="D3">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn12">
+    <Component class="javax.swing.JButton" name="B2">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn6">
+    <Component class="javax.swing.JButton" name="C3">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="btn11">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btn5">
+    <Component class="javax.swing.JButton" name="A2">
       <Properties>
         <Property name="text" type="java.lang.String" value="jButton1"/>
       </Properties>
