--- a/Hackathon/src/Grid.form
+++ b/Hackathon/src/Grid.form
@@ -25,57 +25,6 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="233" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="A1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="A4" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="B1" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="B4" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="A2" min="-2" max="-2" attributes="0"/>
-                                  <Component id="A3" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="B3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="B2" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="C1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="C4" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="D1" alignment="1" min="-2" max="-2" attributes="0"/>
-                                  <Component id="D4" alignment="1" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="C3" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="D3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="C2" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="D2" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
-                  </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="361" max="-2" attributes="0"/>
                       <Component id="btnStart" min="-2" max="-2" attributes="0"/>
@@ -84,8 +33,59 @@
                       <EmptySpace min="-2" pref="339" max="-2" attributes="0"/>
                       <Component id="txtPeople" min="-2" pref="114" max="-2" attributes="0"/>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="285" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="A4" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="A1" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="B1" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="B4" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="A2" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="A3" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="B3" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="B2" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="C1" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="C4" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="D1" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                                  <Component id="D4" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="C3" min="-2" pref="50" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="D3" min="-2" pref="50" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="C2" min="-2" pref="50" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="D2" min="-2" pref="50" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace pref="334" max="32767" attributes="0"/>
+              <EmptySpace pref="459" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -99,34 +99,36 @@
               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="D1" min="-2" pref="47" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="D1" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="A1" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="D2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                          <Component id="C2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                          <Component id="B2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                          <Component id="A2" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                          <Component id="D2" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="C2" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="B2" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="A2" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="C1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="B1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="A1" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="C1" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Component id="B1" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="C3" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                      <Component id="D3" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                      <Component id="B3" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                      <Component id="C3" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="D3" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Component id="B3" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="A3" alignment="1" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="A3" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="C4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="D4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="B4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
-                  <Component id="A4" alignment="3" min="-2" pref="47" max="-2" attributes="0"/>
+                  <Component id="C4" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Component id="D4" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Component id="B4" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                  <Component id="A4" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="218" max="32767" attributes="0"/>
           </Group>
@@ -135,99 +137,51 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JButton" name="C2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="A1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="A1ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="A4">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="D2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="B1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="B1ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="B4">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="A3">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="C1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="C1ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="C4">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="B3">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="D1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="D1ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="D4">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="D4ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="D3">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="B2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="C3">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="A2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnStart">
       <Properties>
